--- a/controls-sdk/controls-sdk-4.5.csproj
+++ b/controls-sdk/controls-sdk-4.5.csproj
@@ -38,8 +38,9 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EyeTribe.ClientSdk">
-      <HintPath>$(SolutionDir)packages\EyeTribe.ClientSdk.0.9.77\lib\net45\EyeTribe.ClientSdk.dll</HintPath>
+    <Reference Include="EyeTribe.ClientSdk, Version=0.9.77.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(SolutionDir)packages\EyeTribe.ClientSdk.0.9.77.6\lib\net45\EyeTribe.ClientSdk.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
